--- a/spring-boot-blog/src/main/resources/application.properties
+++ b/spring-boot-blog/src/main/resources/application.properties
@@ -9,4 +9,11 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.hibernate.ddl-auto=none
+#spring security default user: user, password: printed in the console
+logging.level.org.springframework.security=DEBUG
+# ta có th? config name, password, role
+#spring.security.user.name=lenhat
+#spring.security.user.password=123456
+#spring.security.user.roles=manager
+
 
