--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,14 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.hibernate.ddl-auto=none
+app.jwt-secret = JWTSecretKey
+app.jwt-expiration-milliseconds = 604800000
 #spring security default user: user, password: printed in the console
 logging.level.org.springframework.security=DEBUG
 # ta có th? config name, password, role
 #spring.security.user.name=lenhat
 #spring.security.user.password=123456
 #spring.security.user.roles=manager
+
 
 
