--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=aws
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -13,6 +8,7 @@ app.jwt-secret = JWTSecretKey
 app.jwt-expiration-milliseconds = 604800000
 #spring security default user: user, password: printed in the console
 logging.level.org.springframework.security=DEBUG
+spring.jackson.serialization.indent-output=true
 # ta có th? config name, password, role
 #spring.security.user.name=lenhat
 #spring.security.user.password=123456
